Experimental fix for background size on mobile.

--- a/css/general.css
+++ b/css/general.css
@@ -26,6 +26,12 @@
 	font-family: Ubuntu, sans-serif;
 }
 
+html, body {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
 html {
 	margin: 0px;
 	background: #082d56 url(../images/Schefflera_Arboricola_website_background.jpeg);
